[gd_scene load_steps=19 format=3 uid="uid://b33k26qebuwpu"]

[ext_resource type="Script" path="res://Scenes/main.gd" id="1_cqk0h"]
[ext_resource type="Script" path="res://Cards/hand.gd" id="2_36bfw"]
[ext_resource type="Resource" uid="uid://bq488oaycntco" path="res://CardPile/GeneralCharacter/player.tres" id="2_p5wye"]
[ext_resource type="Texture2D" uid="uid://dgsfcdxqyian2" path="res://Map/UI_14.png" id="3_tos68"]
[ext_resource type="PackedScene" uid="uid://csgjhpq32lxm" path="res://Scenes/area_1.tscn" id="4_3tx81"]
[ext_resource type="PackedScene" uid="uid://dllle1f2o1hf0" path="res://Scenes/player.tscn" id="4_6bwaq"]
[ext_resource type="Script" path="res://Scenes/ui.gd" id="4_kghsa"]
[ext_resource type="Script" path="res://Scenes/player_handler.gd" id="5_wyg3o"]
[ext_resource type="PackedScene" uid="uid://mv3o0wojyv34" path="res://Scenes/policy_tooltip.tscn" id="6_15x1w"]
[ext_resource type="PackedScene" uid="uid://cifqpawchfhpb" path="res://TurnManagement/season_ui.tscn" id="10_87ptg"]
[ext_resource type="Theme" uid="uid://uiwyi6ckxojd" path="res://Themes/chat bubbles.tres" id="11_3v77o"]
[ext_resource type="Texture2D" uid="uid://bu32al6somhyd" path="res://Icons/Asset 1.png" id="11_i3pr7"]
[ext_resource type="Theme" uid="uid://onsxch270sc4" path="res://Themes/npc bubbles.tres" id="13_05edw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hfe8f"]
size = Vector2(179, 265)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j7ovs"]
size = Vector2(1021, 943)

[sub_resource type="Curve" id="Curve_mujov"]
_data = [Vector2(0, 0.2), 0.0, 1.5, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.2), -1.5, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_pxqcy"]
min_value = -1.0
_data = [Vector2(0, -0.5), 0.0, 3.0, 0, 0, Vector2(0.5, 0), 0.0, 0.0, 0, 0, Vector2(1, 0.5), 3.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="RectangleShape2D" id="RectangleShape2D_de0ta"]
size = Vector2(52.75, 80)

[node name="Main" type="Node2D"]
script = ExtResource("1_cqk0h")
player_stats = ExtResource("2_p5wye")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(1920, 1440)
offset_right = 1920.0
offset_bottom = 1440.0
texture = ExtResource("3_tos68")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="DiscardArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DiscardArea"]
position = Vector2(1778.5, 152.5)
shape = SubResource("RectangleShape2D_hfe8f")

[node name="CardDropArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
position = Vector2(950.5, 536.5)
shape = SubResource("RectangleShape2D_j7ovs")
debug_color = Color(0, 0.6, 0.701961, 0.239216)

[node name="Area1" parent="." groups=["area1"] instance=ExtResource("4_3tx81")]
position = Vector2(909, 287)

[node name="Player" parent="." instance=ExtResource("4_6bwaq")]
position = Vector2(1514, 40)

[node name="PlayerHandler" type="Node" parent="." node_paths=PackedStringArray("hand")]
script = ExtResource("5_wyg3o")
hand = NodePath("../UI/Hand")

[node name="UI" type="CanvasLayer" parent="." groups=["ui_layer"]]
script = ExtResource("4_kghsa")

[node name="Hand" type="Control" parent="UI"]
layout_mode = 3
anchor_left = 0.157
anchor_top = 0.762
anchor_right = 0.855
anchor_bottom = 0.944
offset_left = 0.559998
offset_top = 0.719971
offset_right = -0.600098
offset_bottom = -0.360107
script = ExtResource("2_36bfw")
hand_curve = SubResource("Curve_mujov")
rotation_curve = SubResource("Curve_pxqcy")

[node name="PolicyTooltip" parent="UI" instance=ExtResource("6_15x1w")]
offset_left = 1903.0
offset_top = 319.0
offset_right = 2283.0
offset_bottom = 769.0

[node name="DrawPolicyCardButton" type="Button" parent="."]
z_index = -1
offset_left = 48.0
offset_top = 1097.0
offset_right = 227.0
offset_bottom = 1360.0

[node name="DrawTechCardButton" type="Button" parent="."]
z_index = -1
offset_left = 47.0
offset_top = 803.0
offset_right = 228.0
offset_bottom = 1069.0

[node name="NextSeasonButton" type="Button" parent="."]
offset_left = 1676.0
offset_top = 1377.0
offset_right = 1883.0
offset_bottom = 1419.0

[node name="SeasonUI" parent="." instance=ExtResource("10_87ptg")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1664.0
offset_top = 821.0
offset_right = 1895.0
offset_bottom = 1052.0
grow_horizontal = 1
grow_vertical = 1

[node name="NPC" type="Node2D" parent="."]

[node name="NPCManager" type="Node" parent="NPC"]

[node name="TalkTrigger" type="Area2D" parent="NPC"]
position = Vector2(223, 519)

[node name="TextureRect" type="TextureRect" parent="NPC/TalkTrigger"]
offset_left = -43.0
offset_top = -51.0
offset_right = 44.0
offset_bottom = 51.0
texture = ExtResource("11_i3pr7")
expand_mode = 3
stretch_mode = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC/TalkTrigger"]
position = Vector2(-7.375, 12)
shape = SubResource("RectangleShape2D_de0ta")

[node name="ScrollContainer" type="ScrollContainer" parent="NPC"]
offset_left = 21.0
offset_top = 26.0
offset_right = 423.0
offset_bottom = 427.0

[node name="ChatHistory" type="VBoxContainer" parent="NPC/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="PlayerMarginContainer" type="MarginContainer" parent="NPC/ScrollContainer/ChatHistory"]
layout_mode = 2
theme_override_constants/margin_left = 50

[node name="PlayerMessageTemplate" type="RichTextLabel" parent="NPC/ScrollContainer/ChatHistory/PlayerMarginContainer"]
custom_minimum_size = Vector2(0, 20)
layout_direction = 3
layout_mode = 2
theme = ExtResource("11_3v77o")
text = "What do you know about area1? is this area short of water? how is the water quality here??"
fit_content = true

[node name="NPCMarginContainer" type="MarginContainer" parent="NPC/ScrollContainer/ChatHistory"]
layout_mode = 2
theme_override_constants/margin_right = 64

[node name="NPCMessageTemplate" type="RichTextLabel" parent="NPC/ScrollContainer/ChatHistory/NPCMarginContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("13_05edw")
text = "What do you know about area1? is this area short of water? how is the water quality here??"
fit_content = true

[node name="ChatInputArea" type="HBoxContainer" parent="NPC"]
custom_minimum_size = Vector2(0, 55)
offset_left = 21.0
offset_top = 430.0
offset_right = 423.0
offset_bottom = 485.0
size_flags_vertical = 10
theme_override_constants/separation = 4

[node name="QuestionInput" type="TextEdit" parent="NPC/ChatInputArea"]
custom_minimum_size = Vector2(338, 0)
layout_mode = 2
theme = ExtResource("11_3v77o")
placeholder_text = "What do you know about area1? is this area short of water? how is the water quality here??"
wrap_mode = 1

[node name="ChatButton" type="Button" parent="NPC/ChatInputArea"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme = ExtResource("11_3v77o")
text = "CHAT"

[connection signal="body_entered" from="DiscardArea" to="." method="_on_discard_area_body_entered"]
[connection signal="pressed" from="DrawPolicyCardButton" to="." method="_on_draw_policy_card_button_pressed"]
[connection signal="pressed" from="DrawTechCardButton" to="." method="_on_draw_tech_card_button_pressed"]
[connection signal="pressed" from="NextSeasonButton" to="." method="_on_next_season_button_pressed"]
